--- a/Slime.csproj
+++ b/Slime.csproj
@@ -13,4 +13,8 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NPCs\" />
+    <Folder Include="projectiles\" />
+  </ItemGroup>
 </Project>
