--- a/Slime.csproj
+++ b/Slime.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NPCs\" />
+    <Folder Include="NPCs\bosses\" />
     <Folder Include="projectiles\" />
   </ItemGroup>
 </Project>
